feat: Add real-time Supabase subscriptions and secure env
- Create useRealtimeEvents.js hook for real-time database updates
- Add real-time subscriptions to events, gyms, and gym_links tables
- Changes in database now appear automatically without refresh
- Fix env.example to use placeholder values instead of real URL
- Update AI_RULES_READ_FIRST.md with real-time implementation notes
- App now 'attached' to Supabase - live updates work instantly

--- a/env.example
+++ b/env.example
@@ -3,10 +3,11 @@
 # NEVER commit .env.local to git!
 
 # Supabase Project URL
-REACT_APP_SUPABASE_URL=https://xftiwouxpefchwoxxgpf.supabase.co
+# Get this from: Supabase Dashboard > Settings > API > Project URL
+REACT_APP_SUPABASE_URL=https://your-project-id.supabase.co
 
 # Supabase Anonymous Key (public key, safe for client-side)
-# Get this from: Supabase Dashboard > Settings > API
+# Get this from: Supabase Dashboard > Settings > API > Project API keys > anon/public
 REACT_APP_SUPABASE_ANON_KEY=your-anon-key-here
 
 # =============================================================================
