--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@supabase/supabase-js": "^2.38.4",
     "dotenv": "^17.2.0",
     "lucide-react": "^0.294.0",
+    "playwright": "^1.56.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
