--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
+    "@vercel/analytics": "^1.5.0",
     "dotenv": "^17.2.0",
     "lucide-react": "^0.294.0",
     "playwright": "^1.56.1",
