Full documentation audit: consolidate, fix errors, reorganize
- Merged redundant docs (SUPABASE_AUDIT_REPORT, MAGIC_CONTROL_FEATURES, SUPABASE-ARCHITECTURE, DEPLOYMENT_CHECKLIST)
- Fixed incorrect info (admin button emoji, gym names, description truncation, API key docs)
- Moved files to proper folders (GYM_DATA_IMPROVEMENTS to BUSINESS, SYNC_SYSTEM_TECHNICAL to TECHNICAL)
- Deleted outdated automation scripts and test files
- Deleted obsolete database test folders
- Updated INDEX.md with current structure
- All 22 docs now verified accurate against codebase

--- a/env.example
+++ b/env.example
@@ -1,21 +1,50 @@
-# Supabase Configuration
+# Master Events Calendar - Environment Variables
 # Copy this file to .env.local and fill in your actual values
 # NEVER commit .env.local to git!
 
+# =============================================================================
+# SUPABASE (Database)
+# =============================================================================
+# Get these from: Supabase Dashboard > Settings > API
+
 # Supabase Project URL
-# Get this from: Supabase Dashboard > Settings > API > Project URL
 REACT_APP_SUPABASE_URL=https://your-project-id.supabase.co
 
 # Supabase Anonymous Key (public key, safe for client-side)
-# Get this from: Supabase Dashboard > Settings > API > Project API keys > anon/public
 REACT_APP_SUPABASE_ANON_KEY=your-anon-key-here
+
+# =============================================================================
+# RAILWAY (Backend API)
+# =============================================================================
+# Get these from: Railway Dashboard > Your Service
+
+# Railway API URL (the URL where your Flask server is deployed)
+REACT_APP_API_URL=https://your-railway-app.up.railway.app
+
+# API Key (must match the API_KEY set in Railway environment variables)
+REACT_APP_API_KEY=your-api-key-here
 
 # =============================================================================
 # SETUP INSTRUCTIONS:
 # =============================================================================
-# 1. Rename this file to .env.local (remove the .example)
-# 2. Get your Supabase credentials from: https://supabase.com/dashboard
-# 3. Replace 'your-anon-key-here' with your actual anonymous key
-# 4. Never commit .env.local to version control
-# 5. For Vercel deployment, add these in the Vercel dashboard under Settings > Environment Variables
+# LOCAL DEVELOPMENT:
+# 1. Copy this file: cp env.example .env.local
+# 2. Fill in your actual values
+# 3. Never commit .env.local to version control
+#
+# VERCEL DEPLOYMENT:
+# Add these in Vercel Dashboard > Settings > Environment Variables:
+#   - REACT_APP_SUPABASE_URL
+#   - REACT_APP_SUPABASE_ANON_KEY
+#   - REACT_APP_API_URL
+#   - REACT_APP_API_KEY
+#
+# RAILWAY DEPLOYMENT:
+# Add these in Railway Dashboard > Your Service > Variables:
+#   - SUPABASE_URL (same as REACT_APP_SUPABASE_URL)
+#   - SUPABASE_SERVICE_KEY (service key, NOT anon key)
+#   - API_KEY (same as REACT_APP_API_KEY)
+#
+# =============================================================================
+# Last Updated: December 28, 2025
 
