Improve app stability and deployment - Remove dead vercel.json cron (was pointing to non-existent /api) - Move Playwright out of dependencies (was slowing builds) - Add Tailwind/PostCSS/Autoprefixer explicitly to devDeps - Fix realtime subscription churn (useRef pattern) - Move admin PIN to environment variable

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "crons": [
-    {
-      "path": "/api/auto_collect_events",
-      "schedule": "0 6 * * *"
-    }
-  ]
+  "framework": "create-react-app",
+  "buildCommand": "npm run build",
+  "outputDirectory": "build"
 }
